--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="card text-center brown">
+<div class="card text-center brown fixed-bottom">
     <div class="row align-items-center">
         <div class="col">
             <a href=""><img class="m-2" src="/images/Vector.png" width="40px" height="40px" alt="Twitter"></a>
@@ -12,7 +12,7 @@
             <a href=""> <img class="m-2" src="/images/uil_facebook.png" width="40px" height="40px" alt="Facebook"></a>
       </div>
       <div class="card-footer text-muted">
-          Copy Right 2024 &copy;
+          Copyright 2024 &copy;
         </div>
     </div>
 </div>
