--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,38 @@
 body {
-    background-color: skyblue;
+    background-color:  #F3E2D3;
+    
+}
+
+h1{
+    text-align: center;
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+h2{
+    text-align: center;
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+img{ 
+     margin-left: 500px;
+
+}
+
+.image-container img {
+    max-width: 190px;
+    height: auto;
+    margin: 0 10px;
+    margin: 20px;
+    
+}
+
+.image-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+p{
+    text-align: center;
+    font-family: 'Julius Sans One', sans-serif;
+    margin-left: 10px;
 }
