--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,105 @@
 body {
-    background-color: skyblue;
+    background-color: #F3E2D3;
+    font-family: "Julius Sans One", sans-serif;
+}
+
+.form-control{
+    border-radius: 10px;
+    border: 7px solid #CCA37E;
+    text-align: center;
+}
+.btn{
+    background-color: #794529;
+    color: white;
+    
+    
+}
+.btn:hover{
+    color: white;
+    background-color: #C4956B;
+}
+.center-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.alogin{
+    margin-top: 20px;
+    display: flex;
+    
+    justify-content: end;
+}
+.center{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.aa{
+    color: #D7C2AF;
+}
+a{
+    color: black;
+}
+
+.sidebar {
+    width: 200px;
+    background-color: #CCA37E;
+    padding-top: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    position: fixed;
+    margin-top: 15%;
+    margin-left: 10%;
+}
+
+.menu-item {
+    display: block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #794529;
+    text-align: center;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.sidebar .menu-item:hover {
+    background-color: #C4956B;
+}
+.top-bar {
+    width: calc(50% - 100px);
+    background-color: #CCA37E;
+    padding: 10px;
+    margin-top: 5%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    text-align: center;
+    font-size: 24px;
+    color: black;
+}
+.bar{
+    display: flex;
+    justify-content: center; 
+}
+.main-content {
+    display: flex;
+    justify-content: center; 
+}
+.cart {
+    width: calc(50% - 100px);
+    background-color: #D7C2AF;
+    padding: 10px;
+    margin-top: 8%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    text-align: center;
+    font-size: 24px;
+}
+.details {
+    font-size: 16px;
+    color: black;
+    text-align: start;
+    margin-top: 4%;
+}
+.ajt{
+    margin-top: 5%;
 }
