--- a/templates/brand_history/brand_history.html.twig
+++ b/templates/brand_history/brand_history.html.twig
@@ -7,10 +7,11 @@
     
 {% endblock %}
 
-{% block body %}
+{% block body %} 
+{% include "navbar/navbar.html.twig" %}
 <div class="container">
 
-    <div class="card1">
+    <div class="card1 ">
         <p>Bienvenue chez LBL coffee, où le café est plus qu'une simple boisson, c'est une passion cultivée avec dévouement par nos agriculteurs locaux. Sur nos terres fertiles,
          nichées dans les hauteurs montagneuses, nos agriculteurs travaillent sans relâche pour vous offrir le meilleur café possible.</p>
     </div>
