--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,7 +10,7 @@ body{
     padding: 20px;
     border-radius: 10px;
     max-width: 1000px;
-    margin: auto;
+    margin-top: 90px;
     
     font-family: 'Julius Sans One', sans-serif;
 }
